Bug 102261 - FILEOPEN PPTX Badly aligned text, using spaces as indentation
Summary: FILEOPEN PPTX Badly aligned text, using spaces as indentation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:7.6.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2016-09-18 19:39 UTC by Oliver Sander
Modified: 2023-03-31 20:42 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
The pptx presentation (232.56 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2016-09-18 19:39 UTC, Oliver Sander
Details
The presentation as rendered by MS Office (117.32 KB, application/pdf)
2016-09-18 19:40 UTC, Oliver Sander
Details
The presentation as rendered by LO 5.1.4.2 (7.11 MB, application/pdf)
2016-09-18 19:43 UTC, Oliver Sander
Details
Minimal reproducer document (33.73 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-05-31 15:15 UTC, NISZ LibreOffice Team
Details
The minimal reproducer in PP and Impress (118.62 KB, image/png)
2021-05-31 15:16 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Sander 2016-09-18 19:39:29 UTC
Created attachment 127409 [details]
The pptx presentation

I have a presentation file in pptx format.  On several pages, LO aligns the text differently than MSO does.  I file them all as a single bug; please let me know if they are separate bugs, and I will file separate bug reports in that case.
Comment 1 Oliver Sander 2016-09-18 19:40:14 UTC
Created attachment 127410 [details]
The presentation as rendered by MS Office
Comment 2 Oliver Sander 2016-09-18 19:43:23 UTC
Created attachment 127411 [details]
The presentation as rendered by LO 5.1.4.2

Please note the word 'Ausrichtung' (i.e., 'alignment') scattered across this presentation.  I marks the spots where the LO alignment differs from the MS one.
Comment 3 Buovjaga 2016-09-19 09:10:45 UTC
The indentation has been done using spaces. This way of doing indentation is for sure very fragile.
Confirming in any case.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+
Build ID: ba269f7294e2416659011cbb498a2c6b5f9d5199
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-09-12_02:36:16
Locale: fi-FI (fi_FI); Calc: CL

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 4 Oliver Sander 2016-10-21 18:30:54 UTC
Reproduced in 

LibreOfficeDev 5.3.0.0.alpha1 f4ca1573fcf445164c068c1046ab5d084e1b005f
Debian Testing / Mate Desktop
Comment 5 Xisco Faulí 2018-01-09 14:46:12 UTC
Still reproducible in

Version: 6.1.0.0.alpha0+
Build ID: 0ef0740298b45379bbf8d00d50beffee7a2f812a
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 6 QA Administrators 2019-01-10 03:52:57 UTC Comment hidden (obsolete)
Comment 7 Roman Kuznetsov 2019-01-10 20:56:00 UTC
still repro in

Version: 6.3.0.0.alpha0+
Build ID: 7809ec859d5bdb5dedb259a362a15324088b334c
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 8 Buovjaga 2019-09-29 11:28:30 UTC
Still confirmed. Already in 3.3.0

Version: 6.4.0.0.alpha0+ (x64)
Build ID: e1b51d4588b4b39592bb94dd5bb90de5e04d061e
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-09-23_09:16:11
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 9 NISZ LibreOffice Team 2021-05-31 15:15:45 UTC
Created attachment 172500 [details]
Minimal reproducer document

Looks like there is a paragraph level setting in PP to set the default tab size (defTabSz in XML) for which there is no equivalent setting in Impress. That setting is used in this file, for example on slide 10 it's 0.89 cm.

This simple file demonstrates that option by setting it to 2 cm.

Setting the Impress global tab size to 2 cm (default is 0.5 inch in Impress, 1 inch in PP) fixes the display of this paragraph.

Seems like we need to invent a new tabulator setting.
Comment 10 NISZ LibreOffice Team 2021-05-31 15:16:23 UTC
Created attachment 172501 [details]
The minimal reproducer in PP and Impress

Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 187136265d26c014e842550c2f1fc5997736e4fa
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 11 Regina Henschel 2021-05-31 16:07:29 UTC
An attribute in ODF for this is 20.362 style:tab-stop-distance, but currently only in a default style, not in arbitrary paragraph styles.
https://docs.oasis-open.org/office/OpenDocument/v1.3/cs02/part3-schema/OpenDocument-v1.3-cs02-part3-schema.html#__RefHeading__1420168_253892949

I can imagine to allow this attribute in any paragraph style in the inheritance hierarchy. This means using loext:tab-stop-distance in the meantime and writing a proposal to ODF TC.
Comment 12 Commit Notification 2023-03-16 11:21:02 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cced51a1ed7c140276aabfe857510afb974fcef5

tdf#102261: introduce editeng paragraph tab stop default distance

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-03-16 14:12:40 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44271f3997f2374d81a2336131fef7ac79499048

tdf#102261: pptx import: handle defTabSz

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-03-16 15:47:54 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f039fe0da31907a58a4c3b6717cf29caf2685101

tdf#102261: pptx export: implement defTabSz ParaTabStopDefaultDistance

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-03-17 11:06:49 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f92721bf182952be88b0349a17e46b684d630c29

related tdf#102261: consider ParaTabStopDefaultDistance in SvxRuler

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2023-03-24 07:19:26 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa5c01e67775c01b302fc08033a0eb78d3b87489

related tdf#102261: xmloff: ODF import/export for ParaTabStopDefaultDistance

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Gerald Pfeifer 2023-03-25 13:12:18 UTC
The minimal reproducer document appears fixed with today's -dev build

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4ca4282517d02592966576fc642048b3d5ae5532
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US


The original bug document is a hodgepodge of issues, most of which appear
fixed to the extent reasonably possible now.

I went through it page by page, comparing the original PDFs from
PowerPoint with those from LibreOffice back then and both with today's
LibreOffice build, and identify three categories of issues:


A) Two cases that may still be worth looking into:

   Page 9: this looks like tabs may be off somehow?
   Page 23: horizontal extents appear to be different?

B) A number of cases that visually differ, which may not be reasonable to
   address from the LibreOffice side (and moslty look like badly created
   formatting):

   Page 3 - indentation of bullet points: formatting with tabs *and* spaces
   Page 4 - tabs *and* spaces
   Page 5 - tabs *and* spaces
   Page 5 - improved, but not completely; may be a font difference?
   Page 8 - mostly okay, formatting weirdly done in the original doc
   Page 10 - mostly okay, formatting with tabs in one line and spaces in
             the other
   Page 12 - difference due to slightly too small width of text box
   Page 19 - mostly okay, formatting with tabs in one line and spaces in
             the other
   Page 22 - difference due to slightly too small width of text box

C) Several cases that look like distinct issues which I'll file and link
   to this bug report next.
Comment 18 Gerald Pfeifer 2023-03-25 13:22:09 UTC
Note that current Office 365 (web version) renders the underlining
on slide 17 like LibreOffice used to do and still does; so this is
where PowerPoint originally was an outlier. Not an interop bug.
Comment 19 Gerald Pfeifer 2023-03-31 20:42:53 UTC
(In reply to Gerald Pfeifer from comment #17)
> C) Several cases that look like distinct issues which I'll file and link
>    to this bug report next.

I filed bug #154383, bug #154399, and bug #154528 for those distinct
issues now.


With that at most

> A) Two cases that may still be worth looking into:
>
>   Page 9: this looks like tabs may be off somehow?
>   Page 23: horizontal extents appear to be different?

might still be considered potential issues.

Oliver, as the original reporter, if you'd like to double check and
possibly file new (and distinct) reports in case?